--- a/css/index.css
+++ b/css/index.css
@@ -236,15 +236,21 @@ a {
 }
 .hero__title {
   position: relative;
-  padding: 20px 50px;
+  padding: 50px 50px 20px;
   border-radius: 16px;
   font-family: "Great Vibes", cursive;
   /* font-family: "Caveat", cursive */
   font-size: 50px;
+  line-height: 1;
   color: #7a2e21;
   text-align: center;
   margin-bottom: 20px;
-  max-width: calc(100% - 400px);
+}
+@media (min-width: 700px) {
+  .hero__title {
+    max-width: calc(100% - 400px);
+    padding: 20px 50px;
+  }
 }
 .hero__title::before, .hero__title::after {
   position: absolute;
@@ -260,21 +266,37 @@ a {
   background: url(../imgs/pattern-1.png) 0/100px 150px;
 }
 .hero--academy > .hero__title::before {
-  top: -50px;
-  left: -120px;
+  top: -110px;
+  left: 50%;
   width: 200px;
   height: 200px;
   background-image: url(../imgs/bg-desktop-eye.png);
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
-.hero--academy > .hero__title::after {
-  top: 50%;
-  right: -160px;
-  width: 250px;
-  height: 300px;
-  background-image: url(../imgs/academy-bg-nose.png);
-  -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-          transform: translateY(-50%);
+@media (min-width: 700px) {
+  .hero--academy > .hero__title::before {
+    width: 200px;
+    height: 200px;
+    top: -50px;
+    left: -120px;
+    -webkit-transform: initial;
+        -ms-transform: initial;
+            transform: initial;
+  }
+}
+@media (min-width: 700px) {
+  .hero--academy > .hero__title::after {
+    top: 50%;
+    right: -160px;
+    width: 250px;
+    height: 300px;
+    background-image: url(../imgs/academy-bg-nose.png);
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+  }
 }
 .hero--zhivopis > .hero__title {
   background: url(../imgs/pattern-5.png) 0/100px 150px;
